--- a/src/app/home/page/index.component.html
+++ b/src/app/home/page/index.component.html
@@ -43,7 +43,7 @@
     <div class="content">
       <span>limited sales</span>
       <h3>upto 50% off</h3>
-      <a href="#" class="btn">shop now</a>
+      <a [routerLink]="['/shop']" class="btn">shop now</a>
     </div>
   </div>
 
@@ -52,7 +52,7 @@
     <div class="content">
       <span>limited sales</span>
       <h3>upto 50% off</h3>
-      <a href="#" class="btn">shop now</a>
+      <a [routerLink]="['/shop']" class="btn">shop now</a>
     </div>
   </div>
 
@@ -61,7 +61,7 @@
     <div class="content">
       <span>limited sales</span>
       <h3>upto 50% off</h3>
-      <a href="#" class="btn">shop now</a>
+      <a [routerLink]="['/shop']" class="btn">shop now</a>
     </div>
   </div>
 </section>
