--- a/src/app/shared/admin-layout/admin-layout.component.scss
+++ b/src/app/shared/admin-layout/admin-layout.component.scss
@@ -152,26 +152,117 @@ $width-sidebar: 260px;
         font-size: 1.5rem;
       }
     }
-    .user-wrapper {
-      display: flex;
-      align-items: center;
-      img {
+
+    .user-profile {
+      position: relative;
+      // margin-left: -1.4px;
+      &:before {
+        position: absolute;
+        content: "";
+        top: 100%;
+        right: -50%;
+        width: 240px;
+        height: 40px;
+        background: transparent;
+      }
+      &:hover {
+        .menu {
+          visibility: visible;
+          opacity: 1;
+        }
+      }
+      .profile {
         width: 50px;
         height: 50px;
         border-radius: 50%;
         margin-right: 1rem;
         border: 1px solid rgba(#142f43, 0.4);
-      }
-      .info {
-        text-align: center;
-        h4 {
-          font-size: 1.8rem;
-          text-transform: capitalize;
+        overflow: hidden;
+        cursor: pointer;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
-        small {
-          font-size: 1rem;
-          display: inline-block;
-          color: var(--text-grey-seller);
+      }
+      .menu {
+        position: absolute;
+        top: 130%;
+        right: -2%;
+        padding: 10px 20px;
+        background: #fff;
+        width: 220px;
+        border: 1px solid rgb(202, 188, 188);
+        border-radius: 15px;
+        box-sizing: 0 5px 25px rgba(0, 0, 0, 0.1);
+        transition: 0.4s;
+
+        visibility: hidden;
+        opacity: 0;
+        &:after {
+          content: "";
+          position: absolute;
+          top: 0;
+          right: 4px;
+          width: 190px;
+          height: 20px;
+          border-radius: 15px;
+          background: #fff;
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          top: -3.44rem;
+          right: 18px;
+          border-width: 20px 20px;
+          border-style: solid;
+          border-color: transparent transparent transparent rgba(#000, 0.1);
+          transform: rotate(-90deg);
+        }
+        h3 {
+          width: 100%;
+          text-align: center;
+          font-size: 18px;
+          font-weight: 500;
+          color: #555;
+          padding: 20px 0;
+          line-height: 1.2em;
+          span {
+            font-size: 14px;
+            color: #cecece;
+            font-weight: 400;
+          }
+        }
+        ul {
+          li {
+            padding: 10px 4px;
+            border-top: 1px solid #000;
+            a {
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+
+              text-decoration: none;
+              color: #555;
+              font-size: 1.4rem;
+              font-weight: 500;
+              transition: all 0.2s;
+              &:hover {
+                color: #000;
+                i {
+                  opacity: 1;
+                }
+              }
+              i {
+                width: 3rem;
+                max-width: 100%;
+                font-size: 2.4rem;
+                margin-right: 1rem;
+                opacity: 0.5;
+                transition: all 0.2s;
+              }
+            }
+          }
         }
       }
     }
