--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<router-outlet (cartData)="onGetCartData($event)"></router-outlet>
 
 <app-footer></app-footer>
