--- a/src/app/sign-up/pages/sign-up.component.scss
+++ b/src/app/sign-up/pages/sign-up.component.scss
@@ -96,15 +96,21 @@
       background: #fff;
     }
   }
-  mat-form-field {
-    padding: 0 !important;
-  }
-  .mat-form-field-wrapper {
-    padding-bottom: 0 !important;
-  }
+  // mat-form-field {
+  //   padding: 0 !important;
+  // }
+  // .mat-form-field-wrapper {
+  //   padding-bottom: 0 !important;
+  // }
   mat-radio-button {
     & + mat-radio-button {
       margin-left: 10px;
     }
   }
+}
+
+mat-form-field {
+  position: relative;
+  padding: 0 !important;
+  padding-bottom: 4px !important;
 }
