--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -11,7 +11,7 @@
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
   margin-top: 1rem;
   .card-single {
@@ -49,7 +49,8 @@
 .recent-flex {
   margin-top: 3.5rem;
   display: grid;
-  grid-template-columns: 68% auto;
+  // grid-template-columns: 68% auto;
+  grid-template: 1fr;
   grid-gap: 2rem;
 
   .projects {
