--- a/src/app/products/pages/product-list/product-list.component.html
+++ b/src/app/products/pages/product-list/product-list.component.html
@@ -96,7 +96,7 @@
         <button
           mat-raised-button
           color="primary"
-          (click)="openDialogEdit(product.id)"
+          (click)="openDialogEdit(product)"
         >
           <mat-icon>edit</mat-icon>
         </button>
