--- a/src/app/shared/admin-layout/admin-layout.component.html
+++ b/src/app/shared/admin-layout/admin-layout.component.html
@@ -5,7 +5,7 @@
     <label for="sidebar-toggle">
       <h2>
         <i class="fab fa-accusoft"></i>
-        <span>Accusoft</span>
+        <span>Groco</span>
       </h2>
     </label>
   </div>
@@ -34,9 +34,9 @@
         </a>
       </li>
       <li>
-        <a routerLink="/admin/account" [routerLinkActive]="'active'">
-          <i class="fa fa-user-circle"></i>
-          <span>Account</span>
+        <a routerLink="/admin/users" [routerLinkActive]="'active'">
+          <i class="fas fa-users"></i>
+          <span>Users</span>
         </a>
       </li>
     </ul>
@@ -69,12 +69,12 @@
             <li>
               <a href="#"><i class="fal fa-user-circle"></i>My profile</a>
             </li>
-            <li>
+            <!-- <li>
               <a href="#"><i class="fal fa-user-edit"></i>Edit profile</a>
             </li>
             <li>
               <a href="#"><i class="fal fa-question-circle"></i>Help</a>
-            </li>
+            </li> -->
             <li>
               <a (click)="logout()"
                 ><i class="fal fa-sign-out-alt"></i>Logout</a
