--- a/src/app/categories/pages/add-category/add-category.component.scss
+++ b/src/app/categories/pages/add-category/add-category.component.scss
@@ -23,6 +23,25 @@
   .form-field {
     width: 100%;
     padding: 1rem 0 0.5rem;
+    &.form-field-thumbnail {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 8rem;
+
+      border: 1px dashed #bac34e;
+      border-radius: 8px;
+      width: 100%;
+      label {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      input {
+        display: none;
+      }
+    }
   }
   .remember {
     display: flex;
