--- a/src/app/sign-in/pages/sign-in.component.scss
+++ b/src/app/sign-in/pages/sign-in.component.scss
@@ -9,9 +9,10 @@
   border-radius: 0.5rem;
   box-shadow: $box-shadow;
   border: $border;
-  width: 40rem;
-  padding: 3rem;
+  width: 46rem;
+  padding: 4rem 3rem;
   transition: right 0.4s linear;
+
   h3 {
     color: $black;
     text-transform: uppercase;
@@ -41,6 +42,16 @@
     width: 100%;
     text-align: center;
   }
+  .row {
+    display: flex;
+    align-items: flex-end;
+    margin: 0 -15px;
+    .col-5 {
+      flex: 0 0 50%;
+      max-width: 50%;
+      padding: 0 15px;
+    }
+  }
   p {
     color: $light-color;
     padding-top: 0.2rem;
@@ -52,6 +63,15 @@
       &:hover {
         text-decoration: underline;
       }
+    }
+  }
+  .logo {
+    display: block;
+    text-align: right;
+    i {
+      font-size: 1.6rem;
+      color: $green;
+      padding-right: 0.5rem;
     }
   }
 }
