--- a/src/app/users/pages/user-list/user-list.component.html
+++ b/src/app/users/pages/user-list/user-list.component.html
@@ -1,7 +1,7 @@
-<button mat-raised-button color="primary" class="btn-material-add">
+<!-- <button mat-raised-button color="primary" class="btn-material-add">
   <mat-icon>add</mat-icon>
   Add user
-</button>
+</button> -->
 <!-- routerLink="/admin/products/addProduct" -->
 
 <div class="mat-elevation-z8">
